# fuzzy-engine

./: .tool-versions  pyproject.toml  shreddit.yml
src/shreddit/: app.py  config.py  shredder.py
